[gd_scene load_steps=7 format=3 uid="uid://g8nl5yla04y7"]

[ext_resource type="Script" path="res://player/player.gd" id="1_j1hqe"]
[ext_resource type="ArrayMesh" uid="uid://gejmb40nbd10" path="res://ship_test.obj" id="2_fbyei"]

[sub_resource type="BoxShape3D" id="BoxShape3D_luhjr"]
size = Vector3(0.7, 0.25, 1.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_piifi"]
size = Vector3(2.4, 0.1, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_juui0"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_gm64f"]
radius = 5.0

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_j1hqe")

[node name="mesh_anchor" type="Node3D" parent="."]

[node name="mesh" type="MeshInstance3D" parent="mesh_anchor"]
mesh = ExtResource("2_fbyei")
skeleton = NodePath("../..")

[node name="laser_mount" type="Node3D" parent="mesh_anchor/mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.789813, -0.185402, -0.316905)

[node name="laser_mount2" type="Node3D" parent="mesh_anchor/mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.791745, -0.185402, -0.316905)

[node name="target" type="Node3D" parent="mesh_anchor/mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100)

[node name="camera_anchor" type="Node3D" parent="."]

[node name="camera" type="Camera3D" parent="camera_anchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 4)
current = true

[node name="targeting_ray" type="RayCast3D" parent="camera_anchor/camera"]
target_position = Vector3(0, 0, -100)

[node name="target_selection_ray" type="RayCast3D" parent="camera_anchor/camera"]
target_position = Vector3(0, 0, -100)

[node name="body_collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.4)
shape = SubResource("BoxShape3D_luhjr")

[node name="wing collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
shape = SubResource("BoxShape3D_piifi")

[node name="avoidance_sphere" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_juui0")
disabled = true

[node name="boost_timer" type="Timer" parent="."]
one_shot = true

[node name="yaw_roll_timer" type="Timer" parent="."]
one_shot = true

[node name="laser_timer" type="Timer" parent="."]
one_shot = true

[node name="shield_timer" type="Timer" parent="."]
one_shot = true

[node name="weapon_lock_timer" type="Timer" parent="."]
one_shot = true

[node name="avoidance_sphere2" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="collider" type="CollisionShape3D" parent="avoidance_sphere2"]
shape = SubResource("SphereShape3D_gm64f")
